<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/name"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/pray"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/push"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/work"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/dhikr"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/quran"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/score"
            android:textStyle="bold" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/total"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            style="@style/row_element"
            android:background="#f1f1f1"
            android:text="@string/date"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="48dp"
        tools:listitem="@layout/user_item" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>