<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@mipmap/sasa"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="8">

        <TableRow>

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/pray"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/push"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/work"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/dhikr"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/quran"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/score"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/total"
                android:textStyle="bold" />

            <TextView
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/date"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/row_element"
                android:text="Elkrrai"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/ekr_pr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/ekr_pu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/ekr_wo"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1" />

            <EditText
                android:id="@+id/ekr_dhikr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/ekr_qu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:id="@+id/elkrrai_score"
                style="@style/row_element"
                android:text="0"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/elkrrai_total_score"
                style="@style/row_element"
                android:text="0"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/temp_date"
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/date"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/row_element"
                android:text="Saif"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/sa_pr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/sa_pu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/sa_wo"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1" />

            <EditText
                android:id="@+id/sa_dhikr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/sa_qu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:id="@+id/saif_score"
                style="@style/row_element"
                android:text="0"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/saif_total_score"
                style="@style/row_element"
                android:text="0"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/temp_date_saif"
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/date"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/row_element"
                android:text="Abdo"
                android:visibility="gone"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/ab_pr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ab_pu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="3"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ab_wo"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ab_dhikr"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="4"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ab_qu"
                style="@style/row_element"
                android:cursorVisible="false"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="2"
                android:visibility="gone" />

            <TextView
                android:id="@+id/abdo_score"
                style="@style/row_element"
                android:text="0"
                android:visibility="gone"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/abdo_total_score"
                style="@style/row_element"
                android:text="0"
                android:visibility="gone"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/temp_date_abdo"
                style="@style/row_element"
                android:background="#f1f1f1"
                android:text="@string/date"
                android:textStyle="bold"
                android:visibility="gone" />

        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>